Mixed Playground/force-app/main/default/objects/Account/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name</description>
    <label>First Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>