Mixed Playground/force-app/main/default/objects/Account/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name</description>
    <label>Last Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>