Mixed Playground/force-app/main/default/objects/Account/fields/Teste__c.field-meta.xml
<CustomField>
    <fullName>Teste__c</fullName>
    <label>Teste</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hello</fullName>
            </value>
            <value>
                <fullName>World</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>