Mixed Playground/force-app/main/default/objects/Account/validationRules/Minimum_Spending_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Spending_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
 (ISPICKVAL( Support_Tier__c , &quot;Silver&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c 
   )
 ) 
      || 
 (ISPICKVAL( Support_Tier__c , &quot;Gold&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c 
   )
 ), TRUE, FALSE
)</errorConditionFormula>
    <errorMessage>Dollar value too low for this support tier</errorMessage>
</ValidationRule>