Mixed Playground/force-app/main/default/objects/Account/validationRules/Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AnnualRevenue   &lt;  (20  *  $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c )</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>The annual revenue is not enough to Gold Status.</errorMessage>
</ValidationRule>