Mixed Playground/force-app/main/default/objects/Account/listViews/All_Accounts2.listView-meta.xml
<ListView>
    <fullName>All_Accounts2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>Alsarraf</value>
    </filters>
    <label>All Accounts (BOTanicals)</label>
</ListView>